--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,13 +6,12 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
-# Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
-# amazon:
-#   service: S3
-#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-#   region: us-east-1
-#   bucket: your_own_bucket
+amazon:
+  service: S3
+  access_key_id: AKIAURCXWEEMYRAZPNBZ
+  secret_access_key: vWriY3wIzy6jnaJCkefypXCRH1IbYUwCTVmIn6Mz
+  region: ap-southeast-1
+  bucket: unlalabucket
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
